package com.stmartinviersen.tuetenverkauf.model;

public enum MatchStatus {
    AUTO_MATCHED,
    MANUAL_MATCHED,
    UNMATCHED,
    AMBIGUOUS
}
