package com.stmartinviersen.tuetenverkauf.model;

public enum PaymentMethod {
    FINTS_AUTO,
    MANUAL
}
