package com.stmartinviersen.tuetenverkauf.order.model;

public enum OrderStatus {
    AUSSTEHEND,
    BEZAHLT,
    ABGEHOLT,
    STORNIERT
}
